--- a/charts/hdfs-client/Chart.yaml
+++ b/charts/hdfs-client/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
 name: hdfs-client-k8s
-version: 0.2.0
-description: Hadoop Distributed File System (HDFS) hosted by Kubernetes.
+version: 0.1.0
+description: A client pod for HDFS on Kubernetes.
