--- a/tests/values/custom-hadoop-config.yaml
+++ b/tests/values/custom-hadoop-config.yaml
@@ -1,5 +1,5 @@
 # Custom hadoop config keys passed to the hdfs configmap as extra keys.
-customHadoopConfig:
+hdfs-config-k8s.customHadoopConfig:
    coreSite:
      hadoop.http.authentication.type: kerberos
      hadoop.http.authentication.simple.anonymous.allowed: "false"
