--- a/charts/hdfs-k8s/requirements.yaml
+++ b/charts/hdfs-k8s/requirements.yaml
@@ -2,18 +2,36 @@ dependencies:
   - name: zookeeper
     version: "0.6.3"
     repository: https://kubernetes-charts-incubator.storage.googleapis.com/
+    condition: subchart.zookeeper
+    tags:
+      - all-subcharts
   - name: hdfs-config-k8s
     version: "0.1.0"
     repository: "file://../hdfs-config-k8s"
+    condition: subchart.config
+    tags:
+      - all-subcharts
   - name: hdfs-journalnode-k8s
     version: "0.1.0"
     repository: "file://../hdfs-journalnode-k8s"
+    condition: subchart.journalnode
+    tags:
+      - all-subcharts
   - name: hdfs-namenode-k8s
     version: "0.1.0"
     repository: "file://../hdfs-namenode-k8s"
+    condition: subchart.namenode
+    tags:
+      - all-subcharts
   - name: hdfs-datanode-k8s
     version: "0.1.0"
     repository: "file://../hdfs-datanode-k8s"
+    condition: subchart.datanode
+    tags:
+      - all-subcharts
   - name: hdfs-client-k8s
     version: "0.1.0"
     repository: "file://../hdfs-client"
+    condition: subchart.client
+    tags:
+      - all-subcharts
