--- a/tests/values/common.yaml
+++ b/tests/values/common.yaml
@@ -1,8 +1,9 @@
 # Common values.
 
 zookeeper:
-  servers: 1
-  heap: 100m
+  replicaCount: 1
+  env:
+    ZK_HEAP_SIZE: 100m
   resources:
     requests:
       memory: 100m
@@ -13,7 +14,7 @@ hdfs-namenode-k8s:
   hostNetworkEnabled: false
 
 global:
-  zookeeperServers: 1
+  zookeeperQuorumSize: 1
   # Disables affinity so multiple member pods can launch on a single minikube
   # node.
   affinityEnabled: false
