--- a/charts/hdfs-k8s/values.yaml
+++ b/charts/hdfs-k8s/values.yaml
@@ -84,10 +84,9 @@ global:
   # https://hadoop.apache.org/docs/r2.7.2/hadoop-project-dist/hadoop-common/SecureMode.html#Secure_DataNode
   jsvcEnabled: true
 
-# Conditions and tags for triggering subcharts.
-subchart:
-  simple-namenode: false
-
+# Tags for triggering a group of relevant subcharts.
 tags:
-  # Trigger all subcharts by default
-  all-subcharts: true
+  # Trigger all subcharts required for high availability. Enabled by default.
+  ha: true
+  # Trigger all subcharts required for non-HA setup. Disabled by default.
+  simple: false
