Include kerberos in uber-chart

--- a/charts/hdfs-client-k8s/templates/client-deployment.yaml
+++ b/charts/hdfs-client-k8s/templates/client-deployment.yaml
@@ -48,5 +48,5 @@ spec:
         {{- if .Values.global.kerberosEnabled }}
         - name: kerberos-config
           configMap:
-            name: {{ .Values.global.kerberosConfigMap }}
+            name: {{ template "krb5-configmap" . }}
         {{- end }}
