--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -124,10 +124,10 @@ spec:
         {{- if .Values.global.kerberosEnabled }}
         - name: kerberos-config
           configMap:
-            name: {{ .Values.global.kerberosConfigMap }}
+            name: {{ template "krb5-configmap" . }}
         - name: kerberos-keytabs
           secret:
-            secretName: {{ .Values.global.kerberosKeytabsSecret }}
+            secretName: {{ template "krb5-keytabs-secret" . }}
         - name: kerberos-keytab-copy
           emptyDir: {}
         {{- end }}
