--- a/charts/hdfs-k8s/requirements.yaml
+++ b/charts/hdfs-k8s/requirements.yaml
@@ -5,29 +5,35 @@ dependencies:
     condition: condition.subchart.zookeeper
     tags:
       - ha
+      - kerberos
   - name: hdfs-config-k8s
     version: "0.1.0"
     repository: "file://../hdfs-config-k8s"
     condition: condition.subchart.config
     tags:
       - ha
+      - kerberos
       - simple
   - name: hdfs-krb5-k8s
     version: "0.1.0"
     repository: "file://../hdfs-krb5-k8s"
     condition: condition.subchart.kerberos
+    tags:
+      - kerberos
   - name: hdfs-journalnode-k8s
     version: "0.1.0"
     repository: "file://../hdfs-journalnode-k8s"
     condition: condition.subchart.journalnode
     tags:
       - ha
+      - kerberos
   - name: hdfs-namenode-k8s
     version: "0.1.0"
     repository: "file://../hdfs-namenode-k8s"
     condition: condition.subchart.namenode
     tags:
       - ha
+      - kerberos
   # Non-HA namenode. Disabled by default
   - name: hdfs-simple-namenode-k8s
     version: "0.1.0"
@@ -41,6 +47,7 @@ dependencies:
     condition: condition.subchart.datanode
     tags:
       - ha
+      - kerberos
       - simple
   - name: hdfs-client-k8s
     version: "0.1.0"
@@ -48,4 +55,5 @@ dependencies:
     condition: condition.subchart.client
     tags:
       - ha
+      - kerberos
       - simple
