--- a/charts/hdfs-journalnode-k8s/values.yaml
+++ b/charts/hdfs-journalnode-k8s/values.yaml
@@ -1,4 +1,16 @@
-# Default values for template variables.
-
-# Size of editata persistent volume per journalnode instance.
-editdataVolumeSize: 20Gi
+persistence:
+  ## Persistent Volume Storage Class
+  ## If defined, storageClassName: <storageClass>
+  ## If set to "-", storageClassName: "", which disables dynamic provisioning
+  ## If undefined (the default) or set to null, no storageClassName spec is
+  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+  ##   GKE, AWS & OpenStack)
+  ##
+  # storageClass: "-"
+  ## To choose a suitable persistent volume from available static volumes, selectors
+  ## are used.
+  # selector:
+  #   matchLabels:
+  #     volume-type: hdfs-ssd
+  accessMode: ReadWriteOnce
+  size: 20Gi
