--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -1,41 +1,41 @@
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-# Default values for template variables.
-
-# Name of the namenode start script in the config map.
+## Name of the namenode start script in the config map.
 namenodeStartScript: format-and-run.sh
 
-# A namenode start script that can have user specified content.
-# Can be used to conduct ad-hoc operation as specified by a user.
-# To use this, also set the namenodeStartScript variable above
-# to custom-run.sh.
+## A namenode start script that can have user specified content.
+## Can be used to conduct ad-hoc operation as specified by a user.
+## To use this, also set the namenodeStartScript variable above
+## to custom-run.sh.
 customRunScript: |
   #!/bin/bash -x
   echo Write your own script content!
   echo This message will disappear in 10 seconds.
   sleep 10
 
-# Size of metadata persistent volume per namenode instance.
-metadataVolumeSize: 100Gi
+persistence:
+  ## Persistent Volume Storage Class
+  ## If defined, storageClassName: <storageClass>
+  ## If set to "-", storageClassName: "", which disables dynamic provisioning
+  ## If undefined (the default) or set to null, no storageClassName spec is
+  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+  ##   GKE, AWS & OpenStack)
+  ##
+  # storageClass: "-"
 
-# Whether or not to enable pinning of namenode pods to labeled k8s cluster nodes.
+  ## To choose a suitable persistent volume from available static volumes, selectors
+  ## are used.
+  # selector:
+  #   matchLabels:
+  #     volume-type: hdfs-ssd
+
+  accessMode: ReadWriteOnce
+
+  size: 100Gi
+
+## Whether or not to enable pinning of namenode pods to labeled k8s cluster nodes.
 namenodePinningEnabled: false
 
-# Whether or not to use hostNetwork in namenode pods. Disabling this will break
-# data locality as namenode will see pod virtual IPs and fails to equate them with
-# cluster node physical IPs associated with data nodes.
-# We currently disable this only for CI on minikube.
+## Whether or not to use hostNetwork in namenode pods. Disabling this will break
+## data locality as namenode will see pod virtual IPs and fails to equate them with
+## cluster node physical IPs associated with data nodes.
+## We currently disable this only for CI on minikube.
 hostNetworkEnabled: true
