--- a/charts/hdfs-simple-namenode-k8s/values.yaml
+++ b/charts/hdfs-simple-namenode-k8s/values.yaml
@@ -1,6 +1,4 @@
-# Default values for template variables.
-
-# Path of the local disk directory on a cluster node that will contain the namenode
-# fsimage and edit logs. This will be mounted to the namenode as a k8s HostPath
-# volume.
+## Path of the local disk directory on a cluster node that will contain the namenode
+## fsimage and edit logs. This will be mounted to the namenode as a k8s HostPath
+## volume.
 nameNodeHostPath: /hdfs-name
