--- a/charts/hdfs-datanode-k8s/values.yaml
+++ b/charts/hdfs-datanode-k8s/values.yaml
@@ -62,3 +62,14 @@ jsvcEnabled: true
 
 # Whether or not to expect namenodes in the HA setup.
 namenodeHAEnabled: true
+
+# Node labels and tolerations for pod assignment
+nodeSelector: {}
+tolerations: []
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+          - key: hdfs-datanode-exclude
+            operator: DoesNotExist
