--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -1,18 +1,3 @@
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 # A headless service to create DNS records.
 apiVersion: v1
 kind: Service
@@ -134,64 +119,8 @@ spec:
         - name: hdfs-namenode
           image: uhopper/hadoop-namenode:2.7.2
           env:
-            # The following env vars are listed according to low-to-high precedence order.
-            # i.e. Whoever comes last will override the earlier value of the same variable.
-            {{- if .Values.kerberosEnabled }}
-            - name: CORE_CONF_hadoop_security_authentication
-              value: kerberos
-            - name: CORE_CONF_hadoop_security_authorization
-              value: "true"
-            - name: CORE_CONF_hadoop_rpc_protection
-              value: privacy
-            - name: HDFS_CONF_dfs_block_access_token_enable
-              value: "true"
-            - name: HDFS_CONF_dfs_encrypt_data_transfer
-              value: "true"
-            - name: HDFS_CONF_dfs_namenode_kerberos_principal
-              value: hdfs/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
-            # TODO: Check if the https principal is no longer needed in newer
-            # Hadoop version.
-            - name: HDFS_CONF_dfs_namenode_kerberos_https_principal
-              value: HTTP/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
-            - name: HDFS_CONF_dfs_web_authentication_kerberos_principal
-              value: HTTP/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
-            - name: HDFS_CONF_dfs_namenode_keytab_file
-              value: /etc/security/hdfs.keytab
-            - name: HDFS_CONF_dfs_journalnode_kerberos_principal
-              value: hdfs/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
-            - name: HDFS_CONF_dfs_journalnode_kerberos_internal_spnego_principal
-              value: HTTP/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
-            {{- end }}
-            {{- range $key, $value := .Values.customHadoopConfig }}
-            - name: {{ $key | quote }}
-              value: {{ $value | quote }}
-            {{- end }}
-            - name: CORE_CONF_fs_defaultFS
-              value: hdfs://hdfs-k8s
-            - name: CORE_CONF_ha_zookeeper_quorum
-              value: {{ .Values.zookeeperQuorum }}
-            - name: HDFS_CONF_dfs_nameservices
-              value: hdfs-k8s
-            - name: HDFS_CONF_dfs_ha_namenodes_hdfs___k8s
-              value: nn0,nn1
-            - name: HDFS_CONF_dfs_namenode_rpc___address_hdfs___k8s_nn0
-              value: hdfs-namenode-0.hdfs-namenode.default.svc.cluster.local:8020
-            - name: HDFS_CONF_dfs_namenode_rpc___address_hdfs___k8s_nn1
-              value: hdfs-namenode-1.hdfs-namenode.default.svc.cluster.local:8020
-            - name: HDFS_CONF_dfs_namenode_http___address_hdfs___k8s_nn0
-              value: hdfs-namenode-0.hdfs-namenode.default.svc.cluster.local:50070
-            - name: HDFS_CONF_dfs_namenode_http___address_hdfs___k8s_nn1
-              value: hdfs-namenode-1.hdfs-namenode.default.svc.cluster.local:50070
-            - name: HDFS_CONF_dfs_namenode_shared_edits_dir
-              value: qjournal://{{ .Values.journalQuorum }}/hdfs-k8s
-            - name: HDFS_CONF_dfs_ha_automatic___failover_enabled
-              value: "true"
-            - name: HDFS_CONF_dfs_ha_fencing_methods
-              value: "shell(/bin/true)"
-            - name: HDFS_CONF_dfs_client_failover_proxy_provider_hdfs___k8s
-              value: org.apache.hadoop.hdfs.server.namenode.ha.ConfiguredFailoverProxyProvider
-            - name: HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check
-              value: "false"
+            - name: HADOOP_CUSTOM_CONF_DIR
+              value: /etc/hadoop-custom-conf
             - name: MULTIHOMED_NETWORK
               value: "0"
             # Used by the start script below.
@@ -213,6 +142,9 @@ spec:
               mountPath: /hadoop/dfs/name
             - name: nn-start
               mountPath: /nn-start
+              readOnly: true
+            - name: hdfs-config
+              mountPath: /etc/hadoop-custom-conf
               readOnly: true
             {{- if .Values.kerberosEnabled }}
             - name: kerberos-config
@@ -251,6 +183,9 @@ spec:
           configMap:
             name: hdfs-namenode-start-scripts
             defaultMode: 0744
+        - name: hdfs-config
+          configMap:
+            name: {{ .Values.hdfsConfigMap }}
         {{- if .Values.kerberosEnabled }}
         - name: kerberos-config
           configMap:
