Fix a template bug

--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -79,6 +79,7 @@ spec:
       {{- end }}
       {{- if .Values.tolerations }}
       tolerations:
+      {{- end }}
 {{ toYaml .Values.tolerations | indent 8 }}
       containers:
         - name: hdfs-journalnode
