--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -197,8 +197,12 @@ spec:
             - name: nn-scripts
               mountPath: /nn-scripts
               readOnly: true
+            # Mount the volume on the parent dir of the expected location
+            # /hadoop/dfs/name so that the name subdir would be a brand
+            # new empty dir. This way, we won't get affected by existing files
+            # in the volume.
             - name: metadatadir
-              mountPath: /hadoop/dfs/name
+              mountPath: /hadoop/dfs
             - name: hdfs-config
               mountPath: /etc/hadoop-custom-conf
               readOnly: true
